Added Explosive Gun Ammo and Ice Gun Ammo